# src/routes/owner/index.ts
@@ -3,17 +3,20 @@ import OwnerController from "../../controllers/owner";
 
 const route = Router();
 
-route.get("/create", OwnerController.createOwner);
-route.get("/create", OwnerController.getOwner);
-route.get("/create", OwnerController.updateOwner);
-route.get("/create", OwnerController.deleteOwner);
-route.get("/create", OwnerController.createStore);
-route.get("/create", OwnerController.getStore);
-route.get("/create", OwnerController.updateStore);
-route.get("/create", OwnerController.deleteStore);
-route.get("/create", OwnerController.createInternalCategorie);
-route.get("/create", OwnerController.getInternalCategorie);
-route.get("/create", OwnerController.updateInternalCategorie);
+route.post("/create", OwnerController.createOwner);
+route.get("/profile", OwnerController.getOwner);
+route.patch("/updateprofile", OwnerController.updateOwner);
+route.patch("/changepassword", OwnerController.updateOwner);
+route.delete("/delete", OwnerController.deleteOwner);
+route.post("/createstore", OwnerController.createStore);
+route.get("/getstore", OwnerController.getStore);
+route.patch("/updatestore", OwnerController.updateStore);
+route.patch("/updatelogo", OwnerController.updateStore);
+route.patch("/updatecover", OwnerController.updateStore);
+route.delete("/deletestore", OwnerController.deleteStore);
+route.get("/createinternalcategorie", OwnerController.createInternalCategorie);
+route.get("/getinternalcategorie", OwnerController.getInternalCategorie);
+route.get("/updateinternalcategorie", OwnerController.updateInternalCategorie);
 route.get("/create", OwnerController.deleteInternalCategorie);
 route.get("/create", OwnerController.createProduct);
 route.get("/create", OwnerController.getProduct);
