# src/swagger.json
@@ -1824,6 +1824,192 @@
           }
         }
       }
+    },
+    "/colab/login": {
+      "post": {
+        "summary": "Login de Usuário Colaborador",
+        "description": "Rota para login de usuário nível Colaborador.",
+        "tags": ["colaborator"],
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "aplication/json": {
+              "schema": {
+                "type": "object",
+                "$ref": "#/components/schemas/Login-Colab"
+              },
+              "examples": {
+                "Login Colaborador": {
+                  "value": {
+                    "email": "teste@teste.com",
+                    "password": "123456789"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "aplication/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Get-Colaborator"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/colab/profile": {
+      "get": {
+        "summary": "Obter Perfil de Usuário Colaborador",
+        "description": "Rota para o Colaborador logado obter os seus dados.",
+        "tags": ["colaborator"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [],
+        "requestBody": {
+          "required": false
+        },
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "aplication/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Get-Colab"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/colab/updateprofile": {
+      "patch": {
+        "summary": "Atualizar Perfil de Usuário Colaborador",
+        "description": "Rota para o Colaborador logado atualizar os seus dados.",
+        "security": [{ "bearerAuth": [] }],
+        "tags": ["colaborator"],
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "aplication/json": {
+              "schema": {
+                "type": "object",
+                "$ref": "#/components/schemas/Update-Colab"
+              },
+              "examples": {
+                "Atualizar Colaborador": {
+                  "value": {
+                    "firstname": "Ana Paula",
+                    "lasttname": "Silva",
+                    "cpf": "111.222.333-44",
+                    "rg": "12345678",
+                    "org_emitter": "SSP-MA",
+                    "phone": "(98) 9 9333-7777",
+                    "email": "anapsilva@gmail.com"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "aplication/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Responses-SingleMessage"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/colab/changepassword": {
+      "patch": {
+        "summary": "Alterar Senha de Usuário Colaborador",
+        "description": "Rota o Colaborador logado alterar sua Senha.",
+        "tags": ["colaborator"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "aplication/json": {
+              "schema": {
+                "type": "object",
+                "$ref": "#/components/schemas/Update-Password-Colab"
+              },
+              "examples": {
+                "Atualizar Senha do Colaborador": {
+                  "value": {
+                    "currentPassword": "12345678",
+                    "newPassword": "77779999",
+                    "confirmPassword": "77779999"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "aplication/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Responses-SingleMessage"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -2627,6 +2813,200 @@
                 "updatedAt": {
                   "type": "string"
                 }
+              }
+            }
+          }
+        }
+      },
+      "Login-Colab": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      },
+      "Get-Colab": {
+        "type": "object",
+        "properties": {
+          "colaborator": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "integer"
+              },
+              "firstname": {
+                "type": "string"
+              },
+              "lastname": {
+                "type": "string"
+              },
+              "cpf": {
+                "type": "string"
+              },
+              "rg": {
+                "type": "string"
+              },
+              "org_emitter": {
+                "type": "string"
+              },
+              "phone": {
+                "type": "string"
+              },
+              "email": {
+                "type": "string"
+              },
+              "id_admin": {
+                "type": "integer"
+              },
+              "createdAt": {
+                "type": "string"
+              },
+              "updatedAt": {
+                "type": "string"
+              }
+            }
+          }
+        }
+      },
+      "Update-Colab": {
+        "type": "object",
+        "properties": {
+          "firstname": {
+            "type": "string"
+          },
+          "lastname": {
+            "type": "string"
+          },
+          "cpf": {
+            "type": "string"
+          },
+          "rg": {
+            "type": "string"
+          },
+          "org_emitter": {
+            "type": "string"
+          },
+          "phone": {
+            "type": "string"
+          }
+        }
+      },
+      "Update-Password-Colab": {
+        "type": "object",
+        "properties": {
+          "currentPassword": {
+            "type": "string"
+          },
+          "newPassword": {
+            "type": "string"
+          },
+          "confirmPassword": {
+            "type": "string"
+          }
+        }
+      },
+      "Create-Owner": {
+        "type": "object",
+        "properties": {
+          "firstname": {
+            "type": "string"
+          },
+          "lastname": {
+            "type": "string"
+          },
+          "cpf": {
+            "type": "string"
+          },
+          "rg": {
+            "type": "string"
+          },
+          "org_emitter": {
+            "type": "string"
+          },
+          "phone": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          },
+          "confirmPassword": {
+            "type": "string"
+          }
+        }
+      },
+      "Login-Owner": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      },
+      "Response-CreateOwner-LoginOwner": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string"
+          },
+          "firstname": {
+            "type": "string"
+          },
+          "lastname": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "token": {
+            "type": "string"
+          }
+        }
+      },
+      "Get-Profile-Owner": {
+        "type": "object",
+        "properties": {
+          "owner": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "integer"
+              },
+              "firstname": {
+                "type": "string"
+              },
+              "lastname": {
+                "type": "string"
+              },
+              "cpf": {
+                "type": "string"
+              },
+              "rg": {
+                "type": "string"
+              },
+              "org_emitter": {
+                "type": "string"
+              },
+              "phone": {
+                "type": "string"
+              },
+              "email": {
+                "type": "string"
+              },
+              "createdAt": {
+                "type": "string"
+              },
+              "updatedAt": {
+                "type": "string"
               }
             }
           }
